--- a/styles/style.css
+++ b/styles/style.css
@@ -75,3 +75,25 @@ h6 {
 }
 /*--------------------*/
 
+.frame {
+  width: 500px;
+  height: 500px;
+  position: relative;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.cards {
+  display: flex;
+  grid-auto-flow: column;
+  position: absolute;
+  transition: left 0.5s ease;
+  left: 0;
+}
+
+.card {
+  background-size: cover;
+  background-position: center;
+  width: 500px;
+  height: 500px;
+}
